Fixed scrolling bug on mobile

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -9,7 +9,7 @@ p, span, a, li {
 }
 
 html, body {
-    height: 100%;
+    height: 100vh;
     overflow: auto;
 
     .site-wrapper {
